# kwaak

./: .gitignore  .tmp0zIXMs  ARCHITECTURE.md  BENCHMARKING.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.tests  EVALUATIONS.md  README.md  compose.yml  config.toml  config.toml.tmpl  deny.toml  dist-workspace.toml  fake_file.txt  justfile  kwaak.local.toml  kwaak.toml  random_file.txt  release-plz.toml  run.sh  taplo.toml  test_fake_file.txt  test_file_for_pr.txt  typos.toml
.github/: build-setup.yml  dependabot.yml
.github/workflows/: ci.yml  coverage.yml  release-plz.yml  release.yml  tests.yml
benchmarks/notebooks/: query-pipeline.ipynb
benchmarks/swe/: .gitignore  README.md  pyproject.toml
benchmarks/swe/src/kwaak_bench_swe/: benchmark.py  docker_instance.py  kwaak.template.toml  main.py  swe_bench_instance.py  trial.py
benchmarks/swe/tests/: conftest.py  test_benchmark.py  test_docker_instance.py  test_trial.py  test_trial_integration.py
src/: app.rs  chat.rs  chat_message.rs  cli.rs  commands.rs  config.rs  fake_file.rs  fake_file.txt  fake_test.rs  kwaak_tracing.rs  lib.rs  main.rs  onboarding.rs  repository.rs  runtime_settings.rs  simple_prompt_impl.rs  storage.rs  templates.rs  test_utils.rs  tests.rs  tracing.rs  ui.rs  util.rs
src/agent/: agent_session.rs  commit_and_push.rs  conversation_summarizer.rs  delegating_agent.rs  docker_tool_executor.rs  env_setup.rs  mod.rs  running_agent.rs  session.rs  session_recording.rs  tool_summarizer.rs  tools.rs  util.rs  v1.rs
src/agent/agents/: coding.rs  delegate.rs  mod.rs
src/agent/snapshots/: kwaak__agent__docker_tool_executor__tests__context_present_and_connective.snap  kwaak__agent__docker_tool_executor__tests__context_present_and_connective.snap.new  kwaak__agent__docker_tool_executor__tests__ssh_forwarding_on_self-2.snap  kwaak__agent__docker_tool_executor__tests__ssh_forwarding_on_self.snap  kwaak__agent__tool_summarizer__test__prompt_render_where_tool_output_has_jinja.snap  kwaak__agent__tool_summarizer__test__prompt_rendering.snap
src/agent/tools/: delegate_agent.rs  github.rs  mod.rs  patch_file.rs  replace_lines.rs
src/agent/tools/snapshots/: kwaak__agent__tools__patch_file__tests__find_candidates_multiple_hunks.snap  kwaak__agent__tools__patch_file__tests__find_candidates_single_hunk.snap
src/commands/: command.rs  handler.rs  mod.rs  responder.rs  running_agent.rs
src/config/: api_key.rs  command_configuration.rs  config.rs  defaults.rs  llm_configuration.rs  mod.rs  tools.rs
src/evaluations/: logging_responder.rs  mod.rs  output.rs  patch.rs  ragas.rs  tool_evaluation_agent.rs
src/evaluations/fixtures/swebench_2148/: models.py  patch.diff
src/evaluations/tests/: mod.rs
src/frontend/: app.rs  app_command_responder.rs  ascii_logo  command_handler_test.rs  mod.rs  splash.rs  ui.rs  ui_command.rs  ui_event.rs  ui_input_command.rs
src/frontend/actions/: diff.rs  github.rs  mod.rs  scroll.rs
src/frontend/actions/snapshots/: kwaak__frontend__actions__tests__help_message.snap
src/frontend/chat_mode/: chat_list_widget.rs  chat_messages_widget.rs  help_section_widget.rs  input_bar_widget.rs  message_formatting.rs  mod.rs  on_key.rs  test_message_formatting.rs  ui.rs
src/frontend/logs_mode/: mod.rs  on_key.rs  ui.rs
src/frontend/tests/: chat_mode.rs  mod.rs
src/frontend/tests/snapshots/: kwaak__frontend__tests__chat_mode__render_app.snap  kwaak__frontend__tests__chat_mode__render_app.snap.new
src/git/: github.rs  mod.rs  util.rs
src/git/snapshots/: kwaak__git__github__tests__template_render-2.snap  kwaak__git__github__tests__template_render.snap  kwaak__git__github__tests__template_render.snap.new
src/indexing/: garbage_collection.rs  mod.rs  progress_updater.rs  query.rs  repository.rs
src/indexing/snapshots/: kwaak__indexing__query__tests__rendering_document.snap  kwaak__indexing__query__tests__rendering_document.snap.new
src/onboarding/: commands.rs  git.rs  llm.rs  mod.rs  project.rs  util.rs
src/query/: mod.rs  query.rs
src/templates/: pull_request.md
src/tests/: commands_tests.rs
templates/: agentic_answer_prompt.md  github_search_results.md  help.md  indexing_document.md  kwaak.toml  pull_request.md  tavily_search_results.md  tool_summarizer.md  v1_initial_context.md
tests/: auto_scrolling.rs  chat.rs  chat_operations.rs  chat_ui_snapshot.rs  cli_init.rs  commands_from_ui.rs  diff_commands.rs  message_formatting_tests.rs  retry_chat.rs  snapshot_chat_ui.rs  test_message_formatting.rs  test_tools.rs  tool_summarizer_tests.rs
tests/snapshots/: auto_scrolling__auto_scrolled.snap  cli_init__creates_a_new_init_file.snap  cli_init__creates_a_new_init_file.snap.new  commands_from_ui__diff pulled.snap  commands_from_ui__diff-2.snap  commands_from_ui__diff-2.snap.new  commands_from_ui__diff.snap  diff_commands__diff pulled.snap  diff_commands__diff pulled.snap.new  diff_commands__diff.snap  diff_commands__diff.snap.new  retry_chat__after_retry.snap  retry_chat__before_retry.snap
